@@ -1,5 +1,8 @@
 === (new)
 
+* Added bucket_display_size attribute to Account so more buckets
+  can be displayed on some accounts, and the default size for others [Tony Eichelberger]
+
 * Don't save line-items if they are blank [Jamis Buck]
 
 * Allow bucket-reallocation line items to be removed [Jamis Buck]
